--- a/services.html
+++ b/services.html
@@ -50,18 +50,18 @@
 <div class="fontcolor">
 
 
-<p style="margin:0 0 0 0; padding:5px 0; padding:left:10%; font-size:24px; width:101%; "><i class="fa fa-minus" aria-hidden="true"></i> 44+ years of experience in the plastic injection molding industry.</p>
-<p  style="margin:0 0 0 0; padding:5px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;"><i class="fa fa-minus" aria-hidden="true"></i> Complete plastic injection molding from India and USA.</p>
-<p  style="margin:0 0 0 0; padding:5px 0; padding-left:10px; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Machine sizes ranging from 50 tons to 500 tons.
+<p style="margin:20px 0 0 56px;  padding:left:10%; font-size:24px; width:101%; "><i class="fa fa-minus" aria-hidden="true"></i> 44+ years of experience in the plastic injection molding industry.</p>
+<p  style="margin:0 0 0 12px; padding:5px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;"><i class="fa fa-minus" aria-hidden="true"></i> Complete plastic injection molding from India and USA.</p>
+<p  style="margin:0 0 0 -26px; padding:5px 0;  font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Machine sizes ranging from 50 tons to 500 tons.
 </p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Complimentary product design and consulting with quick prototype turn around.</p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Consistany scientific molding, high quality, tight tolerances, and shorter lead time.</p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Value added assemby and packing, inventory protection and free local deleveries.</p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Designing, building, and maintaing the most demanding molds and prototype tooling.</p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities of building biodegradeble and compostable material.</p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities to submit critical inspection data, including firt article report submission.</p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> 100k Clean Room for medical products.</p>
-<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> ISO 9001 certified manufacturing.</p>
+<p style="margin:0 0 0 130px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Complimentary product design and consulting with quick prototype turn around.</p>
+<p style="margin:0 0 0 138px; padding:5px 0;  font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Consistany scientific molding, high quality, tight tolerances, and shorter lead time.</p>
+<p style="margin:0 0 0 133px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Value added assemby and packing, inventory protection and free local deleveries.</p>
+<p style="margin:0 0 0 153px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Designing, building, and maintaing the most demanding molds and prototype tooling.</p>
+<p style="margin:0 0 0 55px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities of building biodegradeble and compostable material.</p>
+<p style="margin:0 0 0 152px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities to submit critical inspection data, including firt article report submission.</p>
+<p style="margin:0 0 0 -65px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> 100k Clean Room for medical products.</p>
+<p style="margin:0 0 0 -92px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> ISO 9001 certified manufacturing.</p>
 </div>
 </div>
 
