--- a/bootharness.html
+++ b/bootharness.html
@@ -80,6 +80,12 @@
 <p>
 6. Walking Pads- One of the features of the Wol CLaw is the ability to walk around with them on. On the bottom of the boot is a nylon walking pad. Should the pad become worn, we offer replacement pads.
 </p>
+<div id="bootone">
+<img class="bootfloat" id="bootone" src="bootone.jpg">
+<p>7.Neoprene Replacement Liners - The Neoprene liners are designed to make the boot fit snugly and securely. A snug fit is essential for confortable and safe climbing. The holes in the liners are cut to ventilate the leg area. The liners affix to the boot shell with velcro strips. For saller climbers we off spacers which fit between the liners and the shell. Using spacers, everyone has a safe secure fit- regardless of their size.</p>
+</div>
+<p id="bag">8. The Wolf Claw Carrying Bag- Your Wolf CLaw, and all of it's accessories fit into the Wolf Claw carrying bag. The bag allows you to grab your boots (and all the accessories) and put them in the climbing truck for convenience.
+<img id="wolfbag" src="wolfbag.jpg">
 
 </div>
 
